test/visibility/private/uses/accessSecondary.good
accessSecondary.chpl:7: error: unresolved call 'Foo.other()'
